--- a/index.html
+++ b/index.html
@@ -366,25 +366,25 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 
 <ul>
 
-<li><p><strong>Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime. </strong> <br>
- Accepted at The Review of Economics and Statistics (2023) <br>
+<li><p>"Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime." <br>
+ Accepted at <strong>The Review of Economics and Statistics</strong> (2023) <br>
 <a href="papers/working_paper_363_Dugoua.pdf" target="_blank">Pdf here</a> | 
   <a href="papers/Dugoua_Innovation_Montreal_SOM.pdf" target="_blank">Supporting Online Materials here</a>
 <br/></p></li>
 
-<li><p><strong>Text as Data in Environmental Economics and Policy.</strong> <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> and <a href="https://www.graduateinstitute.ch/academic-departments/faculty/joelle-noailly" target="_blank">Joelle Noailly</a></em>.
-<em>Review of Environmental Economics and Policy (2022)</em>
+<li><p>"Text as Data in Environmental Economics and Policy." <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> and <a href="https://www.graduateinstitute.ch/academic-departments/faculty/joelle-noailly" target="_blank">Joelle Noailly</a></em>.
+<em><strong>Review of Environmental Economics and Policy</strong> (2022)</em>
 <br /></p></li>
   
-<li><p><strong>Learning from Unincentivized and Incentivized Communication: A Randomized Controlled Trial in India.</strong>
+<li><p>"Learning from Unincentivized and Incentivized Communication: A Randomized Controlled Trial in India."
 <em>with <a href="http://www.yonasalem.net/" target="_blank">Yonas Alem</a></em>.
-<em>Economic Development and Cultural Change (2022)</em><br>
+<em><strong>Economic Development and Cultural Change</strong> (2022)</em><br>
 <a href="papers/alem_dugoua_edcc.pdf" target="_blank">Pdf here</a>  
 <br /></p></li>
   
-<li><p><strong>Green Product Innovation in Industrial Networks: A Theoretical Model.</strong>
+<li><p>"Green Product Innovation in Industrial Networks: A Theoretical Model."
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a></em>.
-<em>Journal of Environmental Economics and Management (2021)</em><br>
+<em><strong>Journal of Environmental Economics and Management</strong> (2021)</em><br>
 <a href="papers/Dugoua.Dumas_Green_Innovation_Production_Network.pdf" target="_blank">Pdf here</a>
 <br /></p></li>
 
