--- a/index.html
+++ b/index.html
@@ -402,14 +402,14 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 <ul>
   
 
-<li><p><strong>Support for climate policy researchers.</strong> 
-<em>Science (2022). Link <a href="https://www.science.org/doi/10.1126/science.adf8956" target="_blank">here</a>. with Hanna R, Nuñez-Jimenez A, Nock D, Arcusa S, Castellanos S, Davidson
+<li><p>"Support for climate policy researchers." 
+<em><strong>Science</strong> (2022). Link <a href="https://www.science.org/doi/10.1126/science.adf8956" target="_blank">here</a>. with Hanna R, Nuñez-Jimenez A, Nock D, Arcusa S, Castellanos S, Davidson
 MR, Edwards MR, Galeazzi C, Gao X, Graff M, Kennedy KM, Kontou E, Lathwal P, Musa M, O'Rear E, Sivaranjani S, Zhang J, Zhu Q. </em>
 <br /></p></li>
   
   
-<li><p><strong>Research and Innovation Policies for the Green Transition.</strong> 
-<em>Chapter in the 2022 SRIP Report: Science, Research and Innovation Performance of the EU.</em> 
+<li><p>"Research and Innovation Policies for the Green Transition." 
+<em>Chapter in the <strong>2022 SRIP Report: Science, Research and Innovation Performance of the EU.</strong></em> 
   Link to chapter <a href="papers/SRIP_chap10_eugeniedugoua.pdf" target="_blank">here</a>. 
   Link to full report <a href="https://research-and-innovation.ec.europa.eu/knowledge-publications-tools-and-data/publications/all-publications/science-research-and-innovation-performance-eu-2022-report_en" target="_blank">here</a>.
 <br /></p></li>
@@ -426,25 +426,25 @@ MR, Edwards MR, Galeazzi C, Gao X, Graff M, Kennedy KM, Kontou E, Lathwal P, Mus
 
 <ul>
 
-<li><p><strong>Assessing Reliability of Electricity Grid Services from Space: The Case of Uttar Pradesh, India. </strong>
+<li><p>"Assessing Reliability of Electricity Grid Services from Space: The Case of Uttar Pradesh, India."
 <em>with <a href="https://www.uh.edu/class/political-science/faculty-and-staff/professors/kennedy/" target="_blank">Ryan Kennedy</a> </em>, Myriam Shiran and <a href="https://johannesu.com/" target="_blank">Johannes Urpelainen</a></em>.
-<em>Energy for Sustainable Development (2022)</em><br>
+<em><strong>Energy for Sustainable Development</strong> (2022)</em><br>
 <a href="papers/prayas_ESD.pdf" target="_blank">Pdf here</a> 
 <br /></p></li>  
 
-<li><p><strong>Satellite data for the social sciences: measuring rural electrification with night-time lights. </strong>
+<li><p>"Satellite Data for the Social Sciences: Measuring Rural Electrification with Night-Time Lights."
 <em>with <a href="https://www.uh.edu/class/political-science/faculty-and-staff/professors/kennedy/" target="_blank">Ryan Kennedy</a> </em> and <a href="https://johannesu.com/" target="_blank">Johannes Urpelainen</a></em>.
-<em>International journal of remote sensing 39, no. 9 (2018): 2690-2701.</em><br>
+<em><strong>International Journal of Remote Sensing</strong> 39, no. 9 (2018): 2690-2701.</em><br>
 </p></li>
 
-<li><p><strong>Geographic and socio-economic barriers to rural electrification: New evidence from Indian villages. </strong>
+<li><p>"Geographic and Socio-Economic Barriers to Rural Electrification: New Evidence from Indian Villages."
 <em>with Ruinan Liu </em> and <a href="https://johannesu.com/" target="_blank">Johannes Urpelainen</a></em>.
-<em>Energy Policy 106 (2017): 278-287.</em><br>
+<em><strong>Energy Policy</strong> 106 (2017): 278-287.</em><br>
 </p></li>
 
-<li><p><strong>Relative deprivation and energy poverty: when does unequal access to electricity cause dissatisfaction? </strong>
+<li><p>"Relative Deprivation and Energy Poverty: When Does Unequal Access to Electricity Cause Dissatisfaction?"
 <em>with <a href="https://johannesu.com/" target="_blank">Johannes Urpelainen</a></em>.
-<em>International Journal of Energy Research 38, no. 13 (2014): 1727-1740.</em><br>
+<em><strong>International Journal of Energy Research</strong> 38, no. 13 (2014): 1727-1740.</em><br>
 </p></li>
 
 </ul>
