--- a/index.html
+++ b/index.html
@@ -366,14 +366,17 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 
 <ul>
 
-<li><p>"Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime." <br>
- Accepted at <strong>The Review of Economics and Statistics</strong> (2023) <br>
-<a href="papers/working_paper_363_Dugoua.pdf" target="_blank">Pdf here</a> | 
-  <a href="papers/Dugoua_Innovation_Montreal_SOM.pdf" target="_blank">Supporting Online Materials here</a>
-<br/></p></li>
+<li><p>"Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime." 
+ Accepted at<em> <strong>The Review of Economics and Statistics</strong> (2023).</em><br>
+<em>Working papers: </em>  
+<a href="https://www.cesifo.org/en/publications/2023/working-paper/induced-innovation-and-international-environmental-agreements" target="_blank">CESifo (2023)</a> 
+  | <a href="https://cep.lse.ac.uk/_NEW/publications/abstract.asp?index=10432" target="_blank">LSE CEP (2023)</a> 
+  | <a href="https://www.lse.ac.uk/granthaminstitute/publication/induced-innovation-and-international-environmental-agreements-evidence-from-the-ozone-regime/" target="_blank">LSE GRI (2021)</a></p></li>
+<br /></p></li>
 
 <li><p>"Text as Data in Environmental Economics and Policy." <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> and <a href="https://www.graduateinstitute.ch/academic-departments/faculty/joelle-noailly" target="_blank">Joelle Noailly</a></em>.
-<em><strong>Review of Environmental Economics and Policy</strong> (2022)</em>
+<em><strong>Review of Environmental Economics and Policy</strong> (2022)</em><br>
+<a href="papers/DugouaDumasNoailly2022REEP.pdf" target="_blank">Pdf here</a>  
 <br /></p></li>
   
 <li><p>"Learning from Unincentivized and Incentivized Communication: A Randomized Controlled Trial in India."
