--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 <em>Working papers: </em>  
 <a href="https://www.cesifo.org/en/publications/2023/working-paper/induced-innovation-and-international-environmental-agreements" target="_blank">CESifo (2023)</a> 
   | <a href="https://cep.lse.ac.uk/_NEW/publications/abstract.asp?index=10432" target="_blank">LSE CEP (2023)</a> 
-  | <a href="https://www.lse.ac.uk/granthaminstitute/publication/induced-innovation-and-international-environmental-agreements-evidence-from-the-ozone-regime/" target="_blank">LSE GRI (2021)</a></p></li>
+  | <a href="https://www.lse.ac.uk/granthaminstitute/publication/induced-innovation-and-international-environmental-agreements-evidence-from-the-ozone-regime/" target="_blank">LSE GRI (2021)</a>
 <br /></p></li>
 
 <li><p>"Text as Data in Environmental Economics and Policy." <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> and <a href="https://www.graduateinstitute.ch/academic-departments/faculty/joelle-noailly" target="_blank">Joelle Noailly</a></em>.
