--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 
 <li><p><strong> Global Coordination Challenges in the Transition to Clean Technology: Lessons from Automotive Innovation </strong><br>
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em>. 
-<em>Draft available upon request</em>.</p></li>
+<em>Draft available <a href="papers/DugouaDumas_cleancars_coordination.pdf" target="_blank">here</a> </em>.</p></li>
 
 <li><p><strong>Directed Technological Change and General Purpose Technologies: Can AI Accelerate the Clean Energy Innovation?</strong><br>
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE) and <a href="http://www.lse.ac.uk/GranthamInstitute/profile/pia-andres/" target="_blank">Pia Andres</a> (LSE)</em>.<br>
