--- a/index.html
+++ b/index.html
@@ -345,11 +345,11 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 
 <li><p><strong> Global Coordination Challenges in the Transition to Clean Technology: Lessons from Automotive Innovation </strong><br>
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em>. 
-<em>Draft available <a href="papers/DugouaDumas_cleancars_coordination.pdf" target="_blank">here</a> </em>.</p></li>
+<em>Working paper available <a href="papers/DugouaDumas_cleancars_coordination.pdf" target="_blank">here</a> </em>.</p></li>
 
 <li><p><strong>Directed Technological Change and General Purpose Technologies: Can AI Accelerate the Clean Energy Innovation?</strong><br>
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE) and <a href="http://www.lse.ac.uk/GranthamInstitute/profile/pia-andres/" target="_blank">Pia Andres</a> (LSE)</em>.<br>
-<em>Working papers: </em> 
+<em>Working paper: </em> 
 <a href="https://www.lse.ac.uk/granthaminstitute/publication/directed-technological-change-and-general-purpose-technologies-can-ai-accelerate-clean-energy-innovation/" target="_blank">LSE GRI </a><br>
 </p></li>
 
