--- a/index.html
+++ b/index.html
@@ -191,10 +191,22 @@
 <p><div style="text-align: justify">
 Hello and Welcome!  <br>
 
-I am an environmental economist working on topics related to innovation, technological change and energy. In short, my interests lie primarily in understanding how policies, and more broadly speaking, institutions can influence innovation and science. Ultimately, my goals are to better understand how economic development can be sustainable for the environment and societies.
+I am an environmental economist working on topics related to innovation, technological change, and energy. 
+  In short, my interests lie primarily in understanding how policies and, more broadly speaking, institutions can influence innovation and science. 
+  Ultimately, my goals are to better understand how economic development can be sustainable for the environment and societies.
 </div>
     
-I graduated with a Ph.D. in Sustainable Development from Columbia University in 2018. My dissertation focused on the economics of environment and innovation. I have since been appointed Assistant Professor in Environmental Economics at the London School of Economics, in the Department of Geography and Environment. I am also affiliated with the Grantham Research Institute and the Center for Economic Performance at the London School of Economics.</p>
+I graduated with a 
+  <a href="https://www.sipa.columbia.edu/sipa-education/phd-sustainable-development" target="_blank">Ph.D. in Sustainable Development from Columbia University</a> in 2018. 
+  My dissertation focused on the economics of the environment, technological change, and innovation. 
+  I have since been appointed Assistant Professor in Environmental Economics at the London School of Economics, in the 
+  <a href="https://www.lse.ac.uk/geography-and-environment" target="_blank">Department of Geography and Environment</a>.   
+At the London School of Economics, I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/" target="_blank">Grantham Research Institute</a>
+  and the <a href="https://cep.lse.ac.uk/" target="_blank">Center for Economic Performance</a>.
+I am also an affiliate of the <a href="https://www.cesifo.org/en/research-network" target="_blank">CESifo Research Network</a>. 
+
+  
+</p>
  
 <div class="row">
 
