--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ I am also an affiliate of the <a href="https://www.cesifo.org/en/research-networ
   | <a href="https://cep.lse.ac.uk/_NEW/publications/abstract.asp?index=10471" target="_blank">LSE CEP</a></p></li>
 
 <li><p><strong> Global Coordination Challenges in the Transition to Clean Technology: Lessons from Automotive Innovation </strong><br>
-<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em>. 
+<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em>. <br>
 <em>Working paper available <a href="papers/DugouaDumas_cleancars_coordination.pdf" target="_blank">here</a> </em>.</p></li>
 
 <li><p><strong>Directed Technological Change and General Purpose Technologies: Can AI Accelerate the Clean Energy Innovation?</strong><br>
@@ -387,19 +387,19 @@ I am also an affiliate of the <a href="https://www.cesifo.org/en/research-networ
 <br /></p></li>
 
 <li><p>"Text as Data in Environmental Economics and Policy." <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> and <a href="https://www.graduateinstitute.ch/academic-departments/faculty/joelle-noailly" target="_blank">Joelle Noailly</a></em>.
-<em><strong>Review of Environmental Economics and Policy</strong> (2022)</em><br>
+<em><strong>Review of Environmental Economics and Policy</strong> (2022)</em> | 
 <a href="papers/DugouaDumasNoailly2022REEP.pdf" target="_blank">Pdf here</a>  
 <br /></p></li>
   
 <li><p>"Learning from Unincentivized and Incentivized Communication: A Randomized Controlled Trial in India."
 <em>with <a href="http://www.yonasalem.net/" target="_blank">Yonas Alem</a></em>.
-<em><strong>Economic Development and Cultural Change</strong> (2022)</em><br>
+<em><strong>Economic Development and Cultural Change</strong> (2022)</em> |
 <a href="papers/alem_dugoua_edcc.pdf" target="_blank">Pdf here</a>  
 <br /></p></li>
   
 <li><p>"Green Product Innovation in Industrial Networks: A Theoretical Model."
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a></em>.
-<em><strong>Journal of Environmental Economics and Management</strong> (2021)</em><br>
+<em><strong>Journal of Environmental Economics and Management</strong> (2021)</em> |
 <a href="papers/Dugoua.Dumas_Green_Innovation_Production_Network.pdf" target="_blank">Pdf here</a>
 <br /></p></li>
 
