--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@ I graduated with a
   <br>
   
   I have since been appointed <strong>Assistant Professor in Environmental Economics</strong> in the 
-  <a href="https://www.lse.ac.uk/geography-and-environment" target="_blank">Department of Geography and Environment</a> at the <strong>London School of Economics</strong>.   
+  <a href="https://www.lse.ac.uk/geography-and-environment" target="_blank">Department of Geography and Environment</a> at the <strong>London School of Economics (LSE)</strong>.   
 
    <br>
   
-  At the London School of Economics, I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/" target="_blank">Grantham Research Institute</a>
+  At LSE, I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/" target="_blank">Grantham Research Institute</a>
   and the <a href="https://cep.lse.ac.uk/" target="_blank">Center for Economic Performance</a>.
 I am also an affiliate of the <a href="https://www.cesifo.org/en/research-network" target="_blank">CESifo Research Network</a>. 
 
