--- a/index.html
+++ b/index.html
@@ -207,10 +207,27 @@ I graduated with a
   At LSE, I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/" target="_blank">Grantham Research Institute</a>
   and the <a href="https://cep.lse.ac.uk/" target="_blank">Center for Economic Performance</a>.
 I am also an affiliate of the <a href="https://www.cesifo.org/en/research-network" target="_blank">CESifo Research Network</a>. 
-
   
 </p>
- 
+
+  
+<p><div style="text-align: justify">
+Wondering how to pronounce my name? You're apparently not the only one. <br>
+Try: <strong> uh - zhay - nee </strong> <br> 
+More help: <br>
+- uh, as in "up" or "cup" (if instead, you say "yoo", I'll forgive you) <br>
+- zh, as in the "s" in vision  <br>
+- ay, as in "gay" or "play" <br>
+- nee, as in "need" or "knee" <br>
+
+At the end of the day, I don't really mind how you say it. 
+  You can even call me by my Starbucks name (Jenny) if that's all you can manage. 
+  But I have found that some people like to know what the original version sounds like. 
+  If that's you, this pronunciation guide is for you!
+
+</p>
+
+   
 <div class="row">
 
       
