--- a/index.html
+++ b/index.html
@@ -199,10 +199,8 @@ I am an environmental economist working on topics related to innovation, technol
 I graduated with a <a href="https://www.sipa.columbia.edu/sipa-education/phd-sustainable-development" target="_blank">Ph.D. in Sustainable Development from Columbia University</a> in 2018. 
   My dissertation focused on the economics of the environment, technological change, and innovation.   
   I have since been appointed <strong>Assistant Professor in Environmental Economics</strong> in the 
-  <a href="https://www.lse.ac.uk/geography-and-environment" target="_blank">Department of Geography and Environment</a> at the <strong>London School of Economics (LSE)</strong>.   
-</div>
-  
-At LSE, I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/" target="_blank">Grantham Research Institute</a> and the <a href="https://cep.lse.ac.uk/" target="_blank">Center for Economic Performance</a>. I am also an affiliate of the <a href="https://www.cesifo.org/en/research-network" target="_blank">CESifo Research Network</a>. 
+  <a href="https://www.lse.ac.uk/geography-and-environment" target="_blank">Department of Geography and Environment</a> at the <strong>London School of Economics (LSE)</strong>.     
+I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/" target="_blank">Grantham Research Institute</a> and the <a href="https://cep.lse.ac.uk/" target="_blank">Center for Economic Performance</a>, and I am an affiliate of the <a href="https://www.cesifo.org/en/research-network" target="_blank">CESifo Research Network</a>. 
 </p>
 
   
