--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     
 
 <p><div style="text-align: justify">
-Hello and Welcome!  <br>
+<strong>Hello and Welcome!</strong>  <br>
 
 I am an environmental economist working on topics related to innovation, technological change, and energy. 
   In short, my interests lie primarily in understanding how policies and, more broadly speaking, institutions can influence innovation and science. 
@@ -201,23 +201,6 @@ I graduated with a <a href="https://www.sipa.columbia.edu/sipa-education/phd-sus
   I have since been appointed <strong>Assistant Professor in Environmental Economics</strong> in the 
   <a href="https://www.lse.ac.uk/geography-and-environment" target="_blank">Department of Geography and Environment</a> at the <strong>London School of Economics (LSE)</strong>.     
 I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/" target="_blank">Grantham Research Institute</a> and the <a href="https://cep.lse.ac.uk/" target="_blank">Center for Economic Performance</a>, and I am an affiliate of the <a href="https://www.cesifo.org/en/research-network" target="_blank">CESifo Research Network</a>. 
-</p>
-
-  
-<p><div style="text-align: justify">
-Wondering how to pronounce my name? You're apparently not the only one. <br>
-Try: <strong> uh - zhay - nee </strong> <br> 
-More help: <br>
-- uh, as in "up" or "cup" (if instead, you say "yoo", I'll forgive you) <br>
-- zh, as in the "s" in vision  <br>
-- ay, as in "gay" or "play" <br>
-- nee, as in "need" or "knee" <br>
-
-At the end of the day, I don't really mind how you say it. 
-  You can even call me by my Starbucks name (Jenny) if that's all you can manage. 
-  But I have found that some people like to know what the original version sounds like. 
-  If that's you, this pronunciation guide is for you!
-
 </p>
 
    
