--- a/index.html
+++ b/index.html
@@ -523,16 +523,15 @@ MR, Edwards MR, Galeazzi C, Gao X, Graff M, Kennedy KM, Kontou E, Lathwal P, Mus
       </li>
      
 <p><div style="text-align: justify">
-<strong>BONUS: Wondering how to pronounce my name?</strong>  <br>
+<strong>Wondering how to pronounce my name?</strong>  <br>
   You're apparently not the only one. <br>
 Try: <strong> uh - zhay - nee </strong> <br>
-More help: <br>
 - uh, as in "up" or "cup" (if instead, you say "yoo", I'll forgive you) <br>
 - zh, as in the "s" in vision  <br>
 - ay, as in "gay" or "play" <br>
 - nee, as in "need" or "knee" <br>
 
-In the end, I don't really mind how you say it! 
+In the end, I don't really mind how you say it. 
   But I have found that some people like to know what the original version sounds like.
   If that's you, this pronunciation guide is for you!
 
