--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@ I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/"
 <ul>
   
 <li><p><strong>Induced Innovation, Inventors, and the Energy Transition</strong><br>
+Conditionally Accepted at <em><strong>AER Insights</strong></em> (Feb 2024) <br>
 <em>with <a href="https://toddgerarden.com/" target="_blank">Todd Gerarden</a> (Cornell University)</em>.<br>
 <em>Working papers: </em>  
 <a href="https://www.nber.org/papers/w31714" target="_blank">NBER</a> 
