--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/"
 <ul>
   
 <li><p><strong>Induced Innovation, Inventors, and the Energy Transition</strong><br>
-Conditionally Accepted at <em><strong>AER Insights</strong></em> (Feb 2024) <br>
+Conditionally Accepted at <em><strong>AER Insights</strong></em> (2024) <br>
 <em>with <a href="https://toddgerarden.com/" target="_blank">Todd Gerarden</a> (Cornell University)</em>.<br>
 <em>Working papers: </em>  
 <a href="https://www.nber.org/papers/w31714" target="_blank">NBER</a> 
@@ -353,6 +353,7 @@ Conditionally Accepted at <em><strong>AER Insights</strong></em> (Feb 2024) <br>
   | <a href="https://cep.lse.ac.uk/_NEW/publications/abstract.asp?index=10471" target="_blank">LSE CEP</a></p></li>
 
 <li><p><strong> Global Coordination Challenges in the Transition to Clean Technology: Lessons from Automotive Innovation </strong><br>
+Revise and Resubmit at <em><strong>PNAS</strong></em> (2024) <br>
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em>. <br>
 <em>Working paper available <a href="papers/DugouaDumas_cleancars_coordination.pdf" target="_blank">here</a> </em>.</p></li>
 
@@ -520,7 +521,8 @@ MR, Edwards MR, Galeazzi C, Gao X, Graff M, Kennedy KM, Kontou E, Lathwal P, Mus
       
       <li>
         <i class="fa-li fa fa-envelope fa-2x" aria-hidden="true"></i>
-        <span id="person-email" itemprop="email"><a href="mailto:e.dugoua@lse.ac.uk">e.dugoua@lse.ac.uk</a></span>
+        <span id="person-email" itemprop="email"><a href="mailto:e.dugoua@lse.ac.uk">e.dugoua@lse.ac.uk</a></span>  <br>
+        Eugenie Dugoua
       </li>
      
 <p><div style="text-align: justify">
