--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ Conditionally Accepted at <em><strong>AER Insights</strong></em> (2024) <br>
 <li><p><strong> Global Coordination Challenges in the Transition to Clean Technology: Lessons from Automotive Innovation </strong><br>
 Revise and Resubmit at <em><strong>PNAS</strong></em> (2024) <br>
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em>. <br>
-<em>Working paper available <a href="papers/DugouaDumas_cleancars_coordination.pdf" target="_blank">here</a> </em>.</p></li>
+<!-- <em>Working paper available <a href="papers/DugouaDumas_cleancars_coordination.pdf" target="_blank">here</a> </em>.</p></li> -->
 
 <li><p><strong>Directed Technological Change and General Purpose Technologies: Can AI Accelerate the Clean Energy Innovation?</strong><br>
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE) and <a href="http://www.lse.ac.uk/GranthamInstitute/profile/pia-andres/" target="_blank">Pia Andres</a> (LSE)</em>.<br>
