--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ Conditionally Accepted at <em><strong>AER Insights</strong></em> (2024) <br>
   | <a href="https://www.cesifo.org/en/publications/2023/working-paper/induced-innovation-inventors-and-energy-transition" target="_blank">CESifo</a> 
   | <a href="https://cep.lse.ac.uk/_NEW/publications/abstract.asp?index=10471" target="_blank">LSE CEP</a></p></li>
 
-<li><p><strong> Global Coordination Challenges in the Transition to Clean Technology: Lessons from Automotive Innovation </strong><br>
+<li><p><strong> Coordination Dynamics Between Fuel Cell and Battery Technologies in the Transition to Clean Cars </strong><br>
 Accepted at <em><strong>PNAS</strong></em> (2024) <br>
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em>. <br>
 <!-- <em>Working paper available <a href="papers/DugouaDumas_cleancars_coordination.pdf" target="_blank">here</a> </em>.</p></li> -->
