--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/"
 
 <ul>
 
-<li><p><strong>"Induced Innovation, Inventors, and the Energy Transition"</strong><br>
+<li><p><strong>"Induced Innovation, Inventors, and the Energy Transition."</strong><br>
 Forthcoming at <em><strong>American Economic Review: Insights</strong></em> (2024) <br>
 <em>with <a href="https://toddgerarden.com/" target="_blank">Todd Gerarden</a> (Cornell University)</em>.<br>
 <em>Papers: </em>  
@@ -380,7 +380,7 @@ Forthcoming at <em><strong>American Economic Review: Insights</strong></em> (202
   | <a href="https://cep.lse.ac.uk/_NEW/publications/abstract.asp?index=10471" target="_blank">LSE CEP</a></p></li>
 
   
-<li><p><strong>"Coordination Dynamics Between Fuel Cell and Battery Technologies in the Transition to Clean Cars"</strong><br>
+<li><p><strong>"Coordination Dynamics Between Fuel Cell and Battery Technologies in the Transition to Clean Cars."</strong> 
 <em><strong>Proceedings of the National Academy of Sciences</strong></em> (2024) <br>
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em>. <br>
 <em>Paper: </em>  
@@ -388,7 +388,7 @@ Forthcoming at <em><strong>American Economic Review: Insights</strong></em> (202
 
   
 <li><p>"Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime." 
- Accepted at<em> <strong>The Review of Economics and Statistics</strong> (2023).</em><br>
+ Accepted at<em> <strong>The Review of Economics and Statistics</strong> (2023) </em><br>
 <em>Working papers: </em>  
 <a href="https://www.dropbox.com/scl/fi/26zr0br72rp1lmcxvs1j8/Dugoua2023_ReStat_montreal_IEA_innovation_withapp.pdf?rlkey=cpa5pekqbko0pgkmisxnxrjoz&st=qxna0tjo&dl=0">Final PDF</a> 
   | <a href="https://www.cesifo.org/en/publications/2023/working-paper/induced-innovation-and-international-environmental-agreements" target="_blank">CESifo (2023)</a> 
@@ -396,21 +396,23 @@ Forthcoming at <em><strong>American Economic Review: Insights</strong></em> (202
   | <a href="https://www.lse.ac.uk/granthaminstitute/publication/induced-innovation-and-international-environmental-agreements-evidence-from-the-ozone-regime/" target="_blank">LSE GRI (2021)</a>
 <br /></p></li>
 
-<li><p>"Text as Data in Environmental Economics and Policy." <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> and <a href="https://www.graduateinstitute.ch/academic-departments/faculty/joelle-noailly" target="_blank">Joelle Noailly</a></em>.
+<li><p>"Text as Data in Environmental Economics and Policy." 
 <em><strong>Review of Environmental Economics and Policy</strong> (2022)</em> | 
+<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> 
+  and <a href="https://www.graduateinstitute.ch/academic-departments/faculty/joelle-noailly" target="_blank">Joelle Noailly</a></em>.
 <a href="papers/DugouaDumasNoailly2022REEP.pdf" target="_blank">Pdf here</a>  
 <br /></p></li>
   
 <li><p>"Learning from Unincentivized and Incentivized Communication: A Randomized Controlled Trial in India."
-<em>with <a href="http://www.yonasalem.net/" target="_blank">Yonas Alem</a></em>.
-<em><strong>Economic Development and Cultural Change</strong> (2022)</em> |
-<a href="papers/alem_dugoua_edcc.pdf" target="_blank">Pdf here</a>  
+<em><strong>Economic Development and Cultural Change</strong> (2022)</em> 
+<em>with <a href="http://www.yonasalem.net/" target="_blank">Yonas Alem</a></em>
+| <a href="papers/alem_dugoua_edcc.pdf" target="_blank">Pdf here</a>  
 <br /></p></li>
   
 <li><p>"Green Product Innovation in Industrial Networks: A Theoretical Model."
-<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a></em>.
-<em><strong>Journal of Environmental Economics and Management</strong> (2021)</em> |
-<a href="papers/Dugoua.Dumas_Green_Innovation_Production_Network.pdf" target="_blank">Pdf here</a>
+<em><strong>Journal of Environmental Economics and Management</strong> (2021)</em> 
+<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a></em>
+| <a href="papers/Dugoua.Dumas_Green_Innovation_Production_Network.pdf" target="_blank">Pdf here</a>
 <br /></p></li>
 
 <br>
