--- a/index.html
+++ b/index.html
@@ -180,11 +180,12 @@
           </a>
         </li>
 
-            <li>
-          <a itemprop="sameAs" href="https://bsky.app/profile/eugeniedugoua.bsky.social" target="_blank">
-            <i class="fa fa-linkedin big-icon"></i>
-          </a>
-        </li>
+        <li>
+  <a itemprop="sameAs" href="https://bsky.app/profile/eugeniedugoua.bsky.social" target="_blank">
+    <!-- Use an SVG for Bluesky -->
+    <img src="img/blueskylogo.png" alt="Bluesky" class="big-icon" />
+  </a>
+</li>
 
         
       </ul>
