--- a/index.html
+++ b/index.html
@@ -207,7 +207,10 @@ I am an environmental economist working on topics related to innovation, technol
   My dissertation focused on the economics of the environment, technological change, and innovation.   
   I have since been appointed <strong>Assistant Professor in Environmental Economics</strong> in the 
   <a href="https://www.lse.ac.uk/geography-and-environment" target="_blank">Department of Geography and Environment</a> at the <strong>London School of Economics (LSE)</strong>.     
-I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/" target="_blank">Grantham Research Institute</a> and the <a href="https://cep.lse.ac.uk/" target="_blank">Center for Economic Performance</a>, and I am an affiliate of the <a href="https://www.cesifo.org/en/research-network" target="_blank">CESifo Research Network</a>. 
+I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/" target="_blank">Grantham Research Institute</a> 
+  and the <a href="https://cep.lse.ac.uk/" target="_blank">Center for Economic Performance</a> at LSE. 
+  I am also a Research Affiliate of the Climate Change and Environment program at the CEPR (Centre for Economic Policy Research) 
+  and an affiliate of the <a href="https://www.cesifo.org/en/research-network" target="_blank">CESifo Research Network</a>. 
 </div>
 </p>
 
