--- a/index.html
+++ b/index.html
@@ -392,10 +392,9 @@ Forthcoming at <em><strong>American Economic Review: Insights</strong></em> (202
 
   
 <li><p><strong>"Coordination Dynamics Between Fuel Cell and Battery Technologies in the Transition to Clean Cars."</strong> 
-<em><strong>Proceedings of the National Academy of Sciences</strong></em> (2024) <br>
-<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em>. <br>
-<em>Paper: </em>  
-<a href="https://www.dropbox.com/scl/fi/u41q1ey4su4vyrpcz1yuc/DugouaDumas2024_PNAS_fuelcell_battery_withapp.pdf?rlkey=gjdur0yxowf67uozc268lxeqt&st=cqz40onw&dl=0">Final PDF</a></p></li> 
+<em><strong>Proceedings of the National Academy of Sciences</strong></em> (2024) 
+<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em> |   
+<a href="https://www.dropbox.com/scl/fi/u41q1ey4su4vyrpcz1yuc/DugouaDumas2024_PNAS_fuelcell_battery_withapp.pdf?rlkey=gjdur0yxowf67uozc268lxeqt&st=cqz40onw&dl=0">Final PDF here</a>. </p></li> 
 
   
 <li><p>"Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime." 
@@ -408,9 +407,9 @@ Forthcoming at <em><strong>American Economic Review: Insights</strong></em> (202
 <br /></p></li>
 
 <li><p>"Text as Data in Environmental Economics and Policy." 
-<em><strong>Review of Environmental Economics and Policy</strong> (2022)</em> | 
+<em><strong>Review of Environmental Economics and Policy</strong> (2022)</em>  
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> 
-  and <a href="https://www.graduateinstitute.ch/academic-departments/faculty/joelle-noailly" target="_blank">Joelle Noailly</a></em>.
+  and <a href="https://www.graduateinstitute.ch/academic-departments/faculty/joelle-noailly" target="_blank">Joelle Noailly</a></em> |
 <a href="papers/DugouaDumasNoailly2022REEP.pdf" target="_blank">Pdf here</a>  
 <br /></p></li>
   
