--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ Forthcoming at <em><strong>American Economic Review: Insights</strong></em> (202
   | <a href="https://cep.lse.ac.uk/_NEW/publications/abstract.asp?index=10471" target="_blank">LSE CEP</a></p></li>
 
   
-<li><p><strong>"Coordination Dynamics Between Fuel Cell and Battery Technologies in the Transition to Clean Cars."</strong> 
+<li><p>"Coordination Dynamics Between Fuel Cell and Battery Technologies in the Transition to Clean Cars." 
 <em><strong>Proceedings of the National Academy of Sciences</strong></em> (2024) 
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em> |   
 <a href="https://www.dropbox.com/scl/fi/u41q1ey4su4vyrpcz1yuc/DugouaDumas2024_PNAS_fuelcell_battery_withapp.pdf?rlkey=gjdur0yxowf67uozc268lxeqt&st=cqz40onw&dl=0">PDF here</a> </p></li> 
