--- a/index.html
+++ b/index.html
@@ -384,24 +384,24 @@ I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/"
 <li><p>"Induced Innovation, Inventors, and the Energy Transition."<br>
 Forthcoming at <em><strong>American Economic Review: Insights</strong></em> (2024) <br>
 <em>with <a href="https://toddgerarden.com/" target="_blank">Todd Gerarden</a> (Cornell University)</em>
-| <a href="https://www.dropbox.com/scl/fi/yi3xeslh3mvfjrjwale5s/DugouaGerarden2024_AERI_Inventors_withapp.pdf?rlkey=mgvltzbdvz166p2ox1hs7wipi&st=t95al2ot&dl=0" target="_blank">PDF here</a>  
   <br>
-<em>Older Working Papers: </em>  <a href="https://www.nber.org/papers/w31714" target="_blank">NBER</a> 
+<a href="https://www.dropbox.com/scl/fi/yi3xeslh3mvfjrjwale5s/DugouaGerarden2024_AERI_Inventors_withapp.pdf?rlkey=mgvltzbdvz166p2ox1hs7wipi&st=t95al2ot&dl=0" target="_blank">PDF here</a>  
+  | <em>Older Working Papers: </em>  <a href="https://www.nber.org/papers/w31714" target="_blank">NBER</a> 
   | <a href="https://www.cesifo.org/en/publications/2023/working-paper/induced-innovation-inventors-and-energy-transition" target="_blank">CESifo</a> 
   | <a href="https://cep.lse.ac.uk/_NEW/publications/abstract.asp?index=10471" target="_blank">LSE CEP</a></p></li>
 
   
 <li><p>"Coordination Dynamics Between Fuel Cell and Battery Technologies in the Transition to Clean Cars." 
 <em><strong>Proceedings of the National Academy of Sciences</strong></em> (2024) 
-<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em> |   
+<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em> 
+  <br>
 <a href="https://www.dropbox.com/scl/fi/u41q1ey4su4vyrpcz1yuc/DugouaDumas2024_PNAS_fuelcell_battery_withapp.pdf?rlkey=gjdur0yxowf67uozc268lxeqt&st=cqz40onw&dl=0">PDF here</a> </p></li> 
 
   
 <li><p>"Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime." 
- Accepted at<em> <strong>The Review of Economics and Statistics</strong> (2023) </em>
-  | <a href="https://www.dropbox.com/scl/fi/26zr0br72rp1lmcxvs1j8/Dugoua2023_ReStat_montreal_IEA_innovation_withapp.pdf?rlkey=cpa5pekqbko0pgkmisxnxrjoz&st=qxna0tjo&dl=0">PDF here</a> 
-  <br>
-<em>Older Working papers: </em>  <a href="https://www.cesifo.org/en/publications/2023/working-paper/induced-innovation-and-international-environmental-agreements" target="_blank">CESifo (2023)</a> 
+ Accepted at<em> <strong>The Review of Economics and Statistics</strong> (2023) </em> <br>
+<a href="https://www.dropbox.com/scl/fi/26zr0br72rp1lmcxvs1j8/Dugoua2023_ReStat_montreal_IEA_innovation_withapp.pdf?rlkey=cpa5pekqbko0pgkmisxnxrjoz&st=qxna0tjo&dl=0">PDF here</a> 
+| <em>Older Working papers: </em>  <a href="https://www.cesifo.org/en/publications/2023/working-paper/induced-innovation-and-international-environmental-agreements" target="_blank">CESifo (2023)</a> 
   | <a href="https://cep.lse.ac.uk/_NEW/publications/abstract.asp?index=10432" target="_blank">LSE CEP (2023)</a> 
   | <a href="https://www.lse.ac.uk/granthaminstitute/publication/induced-innovation-and-international-environmental-agreements-evidence-from-the-ozone-regime/" target="_blank">LSE GRI (2021)</a>
 <br /></p></li>
@@ -409,20 +409,23 @@ Forthcoming at <em><strong>American Economic Review: Insights</strong></em> (202
 <li><p>"Text as Data in Environmental Economics and Policy." 
 <em><strong>Review of Environmental Economics and Policy</strong> (2022)</em>  
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)
-  and <a href="https://www.graduateinstitute.ch/academic-departments/faculty/joelle-noailly" target="_blank">Joelle Noailly</a> (Graduate Institute Geneva) </em> |
-<a href="papers/DugouaDumasNoailly2022REEP.pdf" target="_blank">Pdf here</a>  
+  and <a href="https://www.graduateinstitute.ch/academic-departments/faculty/joelle-noailly" target="_blank">Joelle Noailly</a> (Graduate Institute Geneva) </em>
+    <br>
+  <a href="papers/DugouaDumasNoailly2022REEP.pdf" target="_blank">PDF here</a>  
 <br /></p></li>
   
 <li><p>"Learning from Unincentivized and Incentivized Communication: A Randomized Controlled Trial in India."
 <em><strong>Economic Development and Cultural Change</strong> (2022)</em> 
-<em>with <a href="http://www.yonasalem.net/" target="_blank">Yonas Alem</a> (Gothemburg) </em>
-| <a href="papers/alem_dugoua_edcc.pdf" target="_blank">Pdf here</a>  
+<em>with <a href="http://www.yonasalem.net/" target="_blank">Yonas Alem</a> (Gothenburg) </em>
+    <br>
+<a href="papers/alem_dugoua_edcc.pdf" target="_blank">PDF here</a>  
 <br /></p></li>
   
 <li><p>"Green Product Innovation in Industrial Networks: A Theoretical Model."
 <em><strong>Journal of Environmental Economics and Management</strong> (2021)</em> 
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE) </em>
-| <a href="papers/Dugoua.Dumas_Green_Innovation_Production_Network.pdf" target="_blank">Pdf here</a>
+      <br>
+<a href="papers/Dugoua.Dumas_Green_Innovation_Production_Network.pdf" target="_blank">PDF here</a>
 <br /></p></li>
 
 <br>
