--- a/index.html
+++ b/index.html
@@ -182,11 +182,9 @@
 
         <li>
   <a itemprop="sameAs" href="https://bsky.app/profile/eugeniedugoua.bsky.social" target="_blank">
-    <!-- Use an SVG for Bluesky -->
-    <img src="img/blueskylogo.png" alt="Bluesky" class="big-icon" />
+    <img src="img/blueskylogo.png" alt="Bluesky" style="width: 16px; height: 16px;" />
   </a>
 </li>
-
         
       </ul>
 
