--- a/index.html
+++ b/index.html
@@ -179,12 +179,10 @@
             <i class="fa fa-linkedin big-icon"></i>
           </a>
         </li>
-
-        <br>
         
-        <li>
+        <li style="display: block;">
   <a itemprop="sameAs" href="https://bsky.app/profile/eugeniedugoua.bsky.social" target="_blank">
-    <img src="img/blueskylogo.png" alt="Bluesky" style="width: 30px; height: 30px;" />
+    <img src="img/blueskylogo.svg" alt="Bluesky" style="width: 50px; height: 50px;" />
   </a>
 </li>
         
