--- a/index.html
+++ b/index.html
@@ -349,11 +349,6 @@ I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/"
 <em>with <a href="https://www.lse.ac.uk/geography-and-environment/people/phd-students/ina-drouven" target="_blank">Ina Drouven</a> (LSE)</em> 
   and <em> <a href="https://sites.google.com/site/sefijroth/home" target="_blank">Sefi Roth</a> (LSE)</em>.</p></li>
 
-<li><p>Chapter on <strong>“Industrial Climate Policy, Technology, and Innovation”</strong><br> for Volume 2 of 
-  the Handbook of the Economics of Climate Change for Elsevier’s “Handbook in Economics” series 
-  (co-edited by Lint Barrage and Solomon Hsiang and to be published in Dec 2025), co-authored with 
-  <em> <a href="https://economics.mit.edu/people/faculty/jacob-moscona" target="_blank">Jacob Moscona</a> (MIT)</em>.</p></li>
-  
 <br>
 </ul>
         
@@ -441,12 +436,16 @@ Forthcoming at <em><strong>American Economic Review: Insights</strong></em> (202
 
 <ul>
   
-
+<li><p>“The Economics of Climate Innovation: Technology, Climate Policy, and the Clean Energy Transition.” 
+   Link <a href="papers/DugouaMoscona_Chapter_Innovation.pdf" target="_blank">here</a>.
+  with <em> <a href="https://economics.mit.edu/people/faculty/jacob-moscona" target="_blank">Jacob Moscona</a> (MIT)</em>.
+  <em><strong>Handbook of Climate Change Economics</strong>. Volume 2. Elsevier. </em>
+  (co-edited by Lint Barrage and Solomon Hsiang and to be published in Dec 2025). </p></li>
+  
 <li><p>"Support for climate policy researchers." 
 <em><strong>Science</strong> (2022). Link <a href="https://www.science.org/doi/10.1126/science.adf8956" target="_blank">here</a>. with Hanna R, Nuñez-Jimenez A, Nock D, Arcusa S, Castellanos S, Davidson
 MR, Edwards MR, Galeazzi C, Gao X, Graff M, Kennedy KM, Kontou E, Lathwal P, Musa M, O'Rear E, Sivaranjani S, Zhang J, Zhu Q. </em>
 <br /></p></li>
-  
   
 <li><p>"Research and Innovation Policies for the Green Transition." 
 <em>Chapter in the <strong>2022 SRIP Report: Science, Research and Innovation Performance of the EU.</strong></em> 
