Update paper title on inventor productivity

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/"
 <a href="https://www.lse.ac.uk/granthaminstitute/publication/directed-technological-change-and-general-purpose-technologies-can-ai-accelerate-clean-energy-innovation/" target="_blank">LSE GRI </a><br>
 </p></li>
 
-<li><p><strong>The Effects of Air Pollution on Inventor Productivity</strong><br>
+<li><p><strong>The Effects of Air Pollution and Temperature Shocks on Inventor Productivity</strong><br>
 <em>with <a href="https://www.lse.ac.uk/geography-and-environment/people/phd-students/ina-drouven" target="_blank">Ina Drouven</a> (LSE)</em> 
   and <em> <a href="https://sites.google.com/site/sefijroth/home" target="_blank">Sefi Roth</a> (LSE)</em>.</p></li>
 
