--- a/index.html
+++ b/index.html
@@ -327,7 +327,19 @@ I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/"
     
   </div>
   <div class="col-xs-12 col-md-8">
-    
+
+<h1 id="work-in-progress">Highlight</h1>
+<br>
+<ul>
+
+<li><p>“The Economics of Climate Innovation: Technology, Climate Policy, and the Clean Energy Transition.” 
+   Link <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5726902" target="_blank">here</a>.
+  with <em> <a href="https://economics.mit.edu/people/faculty/jacob-moscona" target="_blank">Jacob Moscona</a> (MIT)</em>.
+  <em><strong>Handbook of Climate Change Economics</strong>. Volume 2. Elsevier. Forthcoming. </em>
+  (co-edited by Lint Barrage and Solomon Hsiang). </p></li>
+  
+<br>
+</ul>
 
 <h1 id="work-in-progress">Work in Progress</h1>
 <br>
@@ -435,13 +447,7 @@ Forthcoming at <em><strong>American Economic Review: Insights</strong></em> (202
 <br>
 
 <ul>
-  
-<li><p>“The Economics of Climate Innovation: Technology, Climate Policy, and the Clean Energy Transition.” 
-   Link <a href="papers/DugouaMoscona_Chapter_Innovation.pdf" target="_blank">here</a>.
-  with <em> <a href="https://economics.mit.edu/people/faculty/jacob-moscona" target="_blank">Jacob Moscona</a> (MIT)</em>.
-  <em><strong>Handbook of Climate Change Economics</strong>. Volume 2. Elsevier. </em>
-  (co-edited by Lint Barrage and Solomon Hsiang and to be published in Dec 2025). </p></li>
-  
+   
 <li><p>"Support for climate policy researchers." 
 <em><strong>Science</strong> (2022). Link <a href="https://www.science.org/doi/10.1126/science.adf8956" target="_blank">here</a>. with Hanna R, Nuñez-Jimenez A, Nock D, Arcusa S, Castellanos S, Davidson
 MR, Edwards MR, Galeazzi C, Gao X, Graff M, Kennedy KM, Kontou E, Lathwal P, Musa M, O'Rear E, Sivaranjani S, Zhang J, Zhu Q. </em>
