--- a/index.html
+++ b/index.html
@@ -332,11 +332,11 @@ I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/"
 <br>
 <ul>
 
-<li><p>“The Economics of Climate Innovation: Technology, Climate Policy, and the Clean Energy Transition.” 
+“The Economics of Climate Innovation: Technology, Climate Policy, and the Clean Energy Transition.” 
    Link <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5726902" target="_blank">here</a>.
   with <em> <a href="https://economics.mit.edu/people/faculty/jacob-moscona" target="_blank">Jacob Moscona</a> (MIT)</em>.
-  <em><strong>Handbook of Climate Change Economics</strong>. Volume 2. Elsevier. Forthcoming. </em>
-  (co-edited by Lint Barrage and Solomon Hsiang). </p></li>
+  <em><strong>Handbook of the Economics of Climate Change</strong>. Volume 2. Elsevier. Forthcoming. </em>
+  (co-edited by Lint Barrage and Solomon Hsiang). 
   
 <br>
 </ul>
