--- a/index.html
+++ b/index.html
@@ -200,17 +200,33 @@
 <strong>Hello and Welcome!</strong>  <br>
 
 I am an environmental economist working on topics related to innovation, technological change, and energy. 
-  In short, my interests lie primarily in understanding how policies and, more broadly speaking, institutions can influence innovation and science. 
-  Ultimately, my goals are to better understand how economic development can be sustainable for the environment and societies.<br>
+In short, my interests lie primarily in understanding how policies and, more broadly speaking, institutions can influence innovation and science. 
+Ultimately, my goals are to better understand how economic development can be sustainable for the environment and societies.<br>
 
-  I graduated with a <a href="https://www.sipa.columbia.edu/sipa-education/phd-sustainable-development" target="_blank">Ph.D. in Sustainable Development from Columbia University</a> in 2018. 
-  My dissertation focused on the economics of the environment, technological change, and innovation.   
-  I have since been appointed <strong>Assistant Professor in Environmental Economics</strong> in the 
-  <a href="https://www.lse.ac.uk/geography-and-environment" target="_blank">Department of Geography and Environment</a> at the <strong>London School of Economics (LSE)</strong>.     
-I am also affiliated with the <a href="https://www.lse.ac.uk/granthaminstitute/" target="_blank">Grantham Research Institute</a> 
-  and the <a href="https://cep.lse.ac.uk/" target="_blank">Center for Economic Performance</a> at LSE. 
-  I am also a Research Affiliate of the Climate Change and Environment program at the CEPR (Centre for Economic Policy Research) 
-  and an affiliate of the <a href="https://www.cesifo.org/en/research-network" target="_blank">CESifo Research Network</a>. 
+I am an <strong>Associate Professor in Environmental Economics</strong> 
+in the <a href="https://www.lse.ac.uk/geography-and-environment" target="_blank">Department of Geography and Environment</a> 
+at the <strong>London School of Economics (LSE)</strong>. 
+I also serve as Co-Lead on "Generating Sustainable Growth" 
+at the <a href="https://www.lse.ac.uk/global-school-of-sustainability" target="_blank">LSE Global School of Sustainability</a>.
+For the 2025-2026 academic sabbatical year, I am a Visiting Scholar at the University of California, Berkeley's Department of Agricultural and Resource Economics.
+
+I am also affiliated with 
+  the <a href="https://cep.lse.ac.uk/" target="_blank">Center for Economic Performance (CEP)</a> 
+  and the <a href="https://www.lse.ac.uk/granthaminstitute/" target="_blank">Grantham Research Institute</a> at LSE,
+a Research Affiliate of the <a href="https://cepr.org/" target="_blank">CEPR (Centre for Economic Policy Research)</a>, 
+and an affiliate of the <a href="https://www.cesifo.org/en/research-network" target="_blank">CESifo Research Network</a>.
+
+I graduated with a <a href="https://www.sipa.columbia.edu/sipa-education/phd-sustainable-development" target="_blank">Ph.D. in Sustainable Development from Columbia University</a> in 2018. 
+My dissertation focused on the economics of the environment, technological change, and innovation.   
+
+<p><em>If you’re interested in the big picture on innovation, climate policy, and the energy transition—but aren’t sure what to read or where to start—my forthcoming Handbook chapter below offers a clear overview.</em></p>
+
+“The Economics of Climate Innovation: Technology, Climate Policy, and the Clean Energy Transition.” 
+   Link <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5726902" target="_blank">here</a>.
+  with <em> <a href="https://economics.mit.edu/people/faculty/jacob-moscona" target="_blank">Jacob Moscona</a> (MIT)</em>.
+  <em><strong>Handbook of the Economics of Climate Change</strong>. Volume 2. Elsevier. Forthcoming. </em>
+  (co-edited by Lint Barrage and Solomon Hsiang). 
+  
 </div>
 </p>
 
