Change profile image to new headshot
Updated profile image and meta image URL.

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
     <div id="profile">
 
       
-      <div class="portrait" style="background-image: url('https://eugeniedugoua.github.io/img/LSE_Headshot.jpg');">
+      <div class="portrait" style="background-image: url('https://eugeniedugoua.github.io/img/2025_landscape1_headshotsquare.jpg');">
       </div>
-      <meta itemprop="image" content="https://eugeniedugoua.github.io/img/LSE_Headshot.jpg">
+      <meta itemprop="image" content="https://eugeniedugoua.github.io/img/2025_landscape1_headshotsquare.jpg">
       
 
       <div class="portrait-title">
